compiler/tests/snapshots/parser__170141183460469231731687303715884105727.snap
---
source: tests/parser.rs
expression: decimal_test
---
"170141183460469231731687303715884105727"

