compiler/tests/snapshots/parser__ast@02_comments.bakugo.snap
---
source: tests/parser.rs
expression: parsed
input_file: tests/examples/02_comments.bakugo
---
SourceFile {
    top_level: [
        FnDecl(
            FnDecl {
                name: Ident {
                    value: "main",
                    span: Span {
                        str: "main",
                        start: 5,
                        end: 9,
                    },
                },
                params: [],
                result_kind: None,
                body: [],
                span: Span {
                    str: "func main() {\n\t/* */\n\n\t/**/\n\n\t/*  hey there */\n\n\t/*hey there*/\n\n\t/*bakugo*/\n\n\t/*\n\n\t*/\n\n\t/*\n\t*/\n\n\t/*\n\t\tbakugo\n\t*/\n}",
                    start: 0,
                    end: 114,
                },
            },
        ),
    ],
}
