compiler/tests/snapshots/parser__ast_from_path@04_var_decl.bakugo.snap
---
source: tests/parser.rs
expression: BakugoParsingErrDebug(err)
input_file: tests/examples/ast_error/04_var_decl.bakugo
---
  × Parsing error
   ╭─[04_var_decl.bakugo:4:1]
 4 │         c int = 20;
 5 │         i, j, k int = 10, 20, 30, 40;
   ·         ──────────────┬─────────────
   ·                       ╰── Syntax error: Number of expressions (4) does not match number of identifers (3)
 6 │     );
   ╰────

