compiler/tests/snapshots/parser__ast_from_path@06_const_decl.bakugo.snap
---
source: tests/parser.rs
expression: BakugoParsingErrDebug(err)
input_file: tests/examples/ast_error/06_const_decl.bakugo
---
  × Parsing error
   ╭─[06_const_decl.bakugo:3:1]
 3 │         c int = 20;
 4 │         i, j, k = 60, 70;
   ·         ────────┬───────
   ·                 ╰── Syntax error: Number of expressions (2) does not match number of identifers (3)
 5 │     );
   ╰────

